--- a/healthify/package.json
+++ b/healthify/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "postcss": "^8.5.2",
     "react": "^18.3.1",
