--- a/healthify-backend/package.json
+++ b/healthify-backend/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sequelize-mock": "^0.10.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
